--- a/lab03/contact.html
+++ b/lab03/contact.html
@@ -1,26 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head> 
-    <meta charset="utf-8">
+    <head> 
+        <meta charset="utf-8">
 
-</head>
-<body> 
-    <h1>Contact</h1>
-<p>Olivia Riddoch
+    </head>
+    <body> 
+        <h1>Contact</h1>
+    <p>Olivia Riddoch
+        <br>
+        600 Brooks Drive
+        <br>
+        Clayton, NY 13624
+        <br>
+        <a href="mailto:ocriddoc@syr.edu">Send me an email!</a>
+        </p>
+    
+        <img src="../images/LI-In-Bug.png" 
+            width="125"
+            height="100"
+            >
     <br>
-    600 Brooks Drive
+    <a href="www.linkedin.com/in/oliviariddoch">My LinkedIn Profile</a>
     <br>
-    Clayton, NY 13624
-    <br>
-    <a href="mailto:ocriddoc@syr.edu">Send me an email!</a>
-    </p>
-   
-    <img src="../images/LI-In-Bug.png" 
-        width="125"
-        height="100"
-        >
-<br>
-<a href="www.linkedin.com/in/oliviariddoch">My LinkedIn Profile</a>
-<br>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2916.1320014029975!2d-76.13626712395549!3d43.038654091960815!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d9f39fba2ccc55%3A0x5e6089065251084d!2sSyracuse%20University!5e0!3m2!1sen!2sus!4v1694717223842!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-</body>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2916.1320014029975!2d-76.13626712395549!3d43.038654091960815!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d9f39fba2ccc55%3A0x5e6089065251084d!2sSyracuse%20University!5e0!3m2!1sen!2sus!4v1694717223842!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </body>
+</html>
