--- a/lab03/contact.html
+++ b/lab03/contact.html
@@ -15,8 +15,8 @@
         <a href="mailto:ocriddoc@syr.edu">Send me an email!</a>
         
     <br>
-    <a href="http://www.linkedin.com/in/oliviariddoch" target="_blank" alt="LinkedIn Profile" >My LinkedIn Profile</a> <br>
-    <a href="http://www.linkedin.com/in/oliviariddoch" target="_blank"><img src="../images/LI-In-Bug.png" width="125" height="100" alt="LinkedIn Logo"  </a> </p>
+    <a href="http://www.linkedin.com/in/oliviariddoch" target="_blank" alt="LinkedIn Profile"> My LinkedIn Profile</a> <br>
+    <a href="http://www.linkedin.com/in/oliviariddoch" target="_blank"><img src="../images/LI-In-Bug.png" width="125" height="100" alt="LinkedIn Logo"></a> </p>
         
     <br>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2916.1320014029975!2d-76.13626712395549!3d43.038654091960815!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d9f39fba2ccc55%3A0x5e6089065251084d!2sSyracuse%20University!5e0!3m2!1sen!2sus!4v1694717223842!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
