--- a/lab03/contact.html
+++ b/lab03/contact.html
@@ -15,7 +15,7 @@
         <a href="mailto:ocriddoc@syr.edu">Send me an email!</a>
         
     <br>
-    <a href="http://www.linkedin.com/in/oliviariddoch" target="_blank" alt="LinkedIn Profile"> My LinkedIn Profile</a> <br>
+    <a href="http://www.linkedin.com/in/oliviariddoch" target="_blank"> My LinkedIn Profile</a> <br>
     <a href="http://www.linkedin.com/in/oliviariddoch" target="_blank"><img src="../images/LI-In-Bug.png" width="125" height="100" alt="LinkedIn Logo"></a> </p>
         
     <br>
