--- a/lab04/contact.html
+++ b/lab04/contact.html
@@ -12,7 +12,7 @@
         <br>
         Clayton, NY 13624
         <br>
-        <a href="mailto:ocriddoc@syr.edu">Send me an email!<a>
+        <a href="mailto:ocriddoc@syr.edu">Send me an email!</a>
         
     <br>
     <a href="http://www.linkedin.com/in/oliviariddoch" target="_blank"> My LinkedIn Profile</a> <br>
