--- a/lab04/contact.html
+++ b/lab04/contact.html
@@ -21,31 +21,32 @@
     <br>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2916.1320014029975!2d-76.13626712395549!3d43.038654091960815!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d9f39fba2ccc55%3A0x5e6089065251084d!2sSyracuse%20University!5e0!3m2!1sen!2sus!4v1694717223842!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </body>
+    <body>
+        <h2>Reach out to me!</h2>
+        <form action="https://formspree.io/f/myyqnnzk" method="post">
+            <label for="fullname">Full Name:</label>
+            <input type="text" id="fullname" name="FullName"> <br>
+            <label for="email">Email Address:</label>
+            <input type="text" id="email" name="EmailAddress"> 
+            <br>
 
-    <h2>Reach out to me!</h2>
-    <form action="https://formspree.io/f/myyqnnzk" method="post">
-        <label for="fullname">Full Name:</label>
-        <input type="text" id="fullname" name="FullName"> <br>
-        <label for="email">Email Address:</label>
-        <input type="text" id="email" name="EmailAddress"> 
-        <br>
+            <p>What can we collaborate on?</p>
+            <input type="checkbox" id="interest" name="Advertising" value="Advertising">
+            <label for="Advertising">Advertising</label><br>
 
-        <p>What can we collaborate on?</p>
-        <input type="checkbox" id="interest" name="Advertising" value="Advertising">
-        <label for="Advertising">Advertising</label><br>
+            <input type="checkbox" id="interest" name="GraphicDesign" value="GraphicDesign">
+            <label for="GraphicDesign">Graphic Design</label><br>
 
-        <input type="checkbox" id="interest" name="GraphicDesign" value="GraphicDesign">
-        <label for="GraphicDesign">Graphic Design</label><br>
+            <input type="checkbox" id="interest" name="WebDevelopment" value="WebDevelopment">
+            <label for="WebDevelopment">Web Development</label><br><br>
 
-        <input type="checkbox" id="interest" name="WebDevelopment" value="WebDevelopment">
-        <label for="WebDevelopment">Web Development</label><br><br>
+            <label for="SpecialComment?">Special Comments?</label><br>
+            <textarea id="SpecialComments?" name="SpecialComments?" rows="3" cols="100"></textarea><br><br>
 
-        <label for="SpecialComment?">Special Comments?</label><br>
-        <textarea id="SpecialComments?" name="SpecialComments?" rows="3" cols="100"></textarea><br><br>
+            <input type="submit" value="send form">
 
-        <input type="submit" value="send form">
-
-    </form>
+        </form>
+    </body>
 
 
 </html>
