--- a/lab04/contact.html
+++ b/lab04/contact.html
@@ -31,14 +31,14 @@
                 <br>
 
                 <p>What can we collaborate on?</p>
-                <input type="checkbox" id="interest" name="Advertising" value="Advertising">
-                <label for="Advertising">Advertising</label><br>
+                <input type="checkbox" id="interest1" name="Advertising" value="Advertising">
+                <label for="interest1">Advertising</label><br>
 
-                <input type="checkbox" id="interest" name="GraphicDesign" value="GraphicDesign">
-                <label for="GraphicDesign">Graphic Design</label><br>
+                <input type="checkbox" id="interest2" name="GraphicDesign" value="GraphicDesign">
+                <label for="interest2">Graphic Design</label><br>
 
-                <input type="checkbox" id="interest" name="WebDevelopment" value="WebDevelopment">
-                <label for="WebDevelopment">Web Development</label><br><br>
+                <input type="checkbox" id="interest3" name="WebDevelopment" value="WebDevelopment">
+                <label for="interest3">Web Development</label><br><br>
 
                 <label for="SpecialComment?">Special Comments?</label><br>
                 <textarea id="SpecialComments?" name="SpecialComments?" rows="3" cols="100"></textarea><br><br>
