--- a/lab04/contact.html
+++ b/lab04/contact.html
@@ -40,8 +40,8 @@
                 <input type="checkbox" id="interest3" name="WebDevelopment" value="WebDevelopment">
                 <label for="interest3">Web Development</label><br><br>
 
-                <label for="SpecialComment?">Special Comments?</label><br>
-                <textarea id="SpecialComments?" name="SpecialComments?" rows="3" cols="100"></textarea><br><br>
+                <label for="specialcomments">Special Comments?</label><br>
+                <textarea id="specialcomments" name="SpecialComments?" rows="3" cols="100"></textarea><br><br>
 
                 <input type="submit" value="send form">
 
