--- a/lab06/skills.html
+++ b/lab06/skills.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Skills</title>
+        <link rel="stylesheet" href="styles.css">
         <style>
             table, th, td {border: 1px solid black;}
         </style>
@@ -16,7 +17,7 @@
                 <th>Skill</th>
                 <th>Competency Level</th>
             </tr>
-            <tr>
+            <tr class="evenrow">
                 <td>Design</td>
                 <td>Adobe Illustrator</td>
                 <td>Master</td>
@@ -26,7 +27,7 @@
                 <td>Adobe Photoshop</td>
                 <td>Master</td>
             </tr>
-            <tr>
+            <tr class="evenrow">
                 <td>Design</td>
                 <td>Adobe InDesign</td>
                 <td>Proficient</td>
@@ -36,7 +37,7 @@
                 <td>Adobe Lightroom</td>
                 <td>Proficient</td>
             </tr>
-            <tr>
+            <tr class="evenrow">
                 <td>Editting</td>
                 <td>Adobe Final Cut Pro</td>
                 <td>Proficient</td>
@@ -46,7 +47,7 @@
                 <td>Microsoft Word</td>
                 <td>Proficient</td>
             </tr>
-            <tr>
+            <tr class="evenrow">
                 <td>Office Skills</td>
                 <td>Microsoft Powerpoint</td>
                 <td>Proficient</td>
@@ -56,7 +57,7 @@
                 <td>Microsoft Excel</td>
                 <td>Beginner</td>
             </tr>
-            <tr>
+            <tr class="evenrow">
                 <td>Office Skills</td>
                 <td>Microsoft Outlook</td>
                 <td>Master</td>
