--- a/lab09/skills.html
+++ b/lab09/skills.html
@@ -23,19 +23,19 @@
         
         <div class="flexbox2">
             <div class="column1"><div class="skills">
-                <div> <img src="../images/brush-solid.svg" alt="brush">
+                <div> <img src="../images/paintbrush.png" alt="brush">
                     <br>
                     Adobe Illustrator </div>
-                <div><img src="../images/chart-simple-solid.svg" alt="chart">
+                <div><img src="../images/graph.png" alt="chart">
                     <br>
                     MRI Simmons Research</div>
-                <div><img src="../images/code-solid.svg" alt="code">
+                <div><img src="../images/code.png" alt="code">
                     <br>
                     HTML</div>
-                <div><img src="../images/film-solid.svg" alt="film">
+                <div><img src="../images/film.png" alt="film">
                     <br>
                     Adobe Premiere</div>
-                <div><img src="../images/pen-nib-solid.svg" alt="pen nib">
+                <div><img src="../images/pen.png" alt="pen nib">
                     <br>
                     Adobe Photoshop</div>
             </div></div>
