--- a/lab10/index.html
+++ b/lab10/index.html
@@ -13,7 +13,7 @@
                 <a href="index.html">Home</a> | <a href="skills.html">Skills</a> | <a href="contact">Contact</a> 
             </p>
         </nav>
-        <header><a href="http://www.linkedin.com/in/oliviariddoch" target="_blank"><img src="../images/bio_banner.jpg" alt="Olivia's Banner"></a></header>
+        <header><a href="http://www.linkedin.com/in/oliviariddoch" target="_blank"><img class="banner" src="../images/bio_banner.jpg" alt="Olivia's Banner"></a></header>
        <main>
         <h1>Olivia Riddoch's Biography</h1>
         Hi!
