--- a/lab10/contact.html
+++ b/lab10/contact.html
@@ -8,9 +8,7 @@
     </head>
     <body> 
         <nav>
-            <p>
-                <a href="index.html">Home</a> | <a href="skills.html">Skills</a> | <a href="contact">Contact</a> 
-            </p>
+                <a href="index.html">Home</a> <span>|</span> <a href="skills.html">Skills</a> <span>|</span> <a href="contact.html">Contact</a> 
         </nav>
 
     <div class="row1">
@@ -53,7 +51,7 @@
                 <label for="interest3">Web Development</label><br><br>
 
                 <label for="specialcomments">Special Comments?</label><br>
-                <textarea id="specialcomments" name="SpecialComments?" rows="3" cols="50"></textarea><br><br>
+                <textarea id="specialcomments" name="SpecialComments?" rows="3" cols="30"></textarea><br><br>
 
                 <input type="submit" value="send form">
 
