--- a/lab10/index.html
+++ b/lab10/index.html
@@ -9,9 +9,7 @@
 
     <body>
         <nav>
-            <p>
-                <a href="index.html">Home</a> | <a href="skills.html">Skills</a> | <a href="contact">Contact</a> 
-            </p>
+            <a href="index.html">Home</a> <span>|</span> <a href="skills.html">Skills</a> <span>|</span> <a href="contact.html">Contact</a> 
         </nav>
         <header><a href="http://www.linkedin.com/in/oliviariddoch" target="_blank"><img class="banner" src="../images/bio_banner.jpg" alt="Olivia's Banner"></a></header>
        <main>
