--- a/lab10/index.html
+++ b/lab10/index.html
@@ -33,7 +33,7 @@
     <footer>
         <hr>
         &copy; 2023
-        <quote class="quote">"Design is intelligence made visible." -Alina Wheeler</quote>
+        <p class="quote">"Design is intelligence made visible." -Alina Wheeler</p>
     </footer>
 
     </body>
