--- a/project5/aboutme.html
+++ b/project5/aboutme.html
@@ -19,14 +19,14 @@
     technical design skills including the Adobe Suite as well as the extensive process of researching
     audiences and media planning. I can use databases like MRI Simmons and GWI to study
     audiences and come to conclusions about their media preferences. <a rel="resume" href="#resume">Check out my resume below!</a>
-    <img src="../projectfolder/sitemedia/Headshot_v1.jpg" alt="headshot" width="500px">
+    <img src="../projectfolder/sitemedia/Headshot_v1.jpg" alt="headshot">
         When I’m not in class, I’m usually at a TNH or Ski Club event! TNH is the top advertising club in
     the country for college media creation. We take on real clients and produce professional,
     strategic material. In the past I have worked with Heritage Cafe and Luna Cat Cafe all based in
     Syracuse. The Syracuse Ski Club is where the cold Syracuse winters get put to good use. I ski
     twice a week at local mountains and take occasional weekend trips. I have met the best people
     and had amazing experiences.
-    <img src="../projectfolder/sitemedia/IMG_1356.jpg" alt="olivia and tessa at ski" width="500px">
+    <img src="../projectfolder/sitemedia/IMG_1356.jpg" alt="olivia and tessa at ski">
     In addition to my crazy schedule I love to take on personal creative projects when I have the
     time. I have been loving sewing and gaining so much knowledge in the past couple of months. I
     love the technical skill and math knowledge that sewing uses to create a one of one piece. Here are some of my recent works:
@@ -38,7 +38,7 @@
 
     Thanks for reading and I can’t wait to get to know you!
         Take care,
-        <img src="../projectfolder/sitemedia/Untitled_Artwork-1.png" alt="signature" width="500px">
+        <img src="../projectfolder/sitemedia/Untitled_Artwork-1.png" alt="signature">
 
 
 
