--- a/project5/aboutme.html
+++ b/project5/aboutme.html
@@ -11,7 +11,7 @@
 <header> <a href="skeletonsite.html"> <img src="../projectfolder/sitemedia/wordmark.png" alt="wordmark"></a></header>
 
 <h1>Hey, nice to meet ya!</h1>
-<hr/>
+<hr>
 <body>
     My name is Olivia Riddoch and I’m a junior at Syracuse University studying Creative Advertising at the S.I. Newhouse School of
     Public Communications and Information Management & Technology at the iSchool. I love to
@@ -30,10 +30,10 @@
     In addition to my crazy schedule I love to take on personal creative projects when I have the
     time. I have been loving sewing and gaining so much knowledge in the past couple of months. I
     love the technical skill and math knowledge that sewing uses to create a one of one piece. Here are some of my recent works:
-    <img src="../projectfolder/sitemedia/IMG_8322.jpg" alt="bag" width="500px">
-    <img src="../projectfolder/sitemedia/IMG_8326.jpg" alt="bag" width="500px">
-    <img src="../projectfolder/sitemedia/IMG_8652.jpg" alt="bag" width="500px">
-    <img src="../projectfolder/sitemedia/IMG_8653.jpg" alt="bag" width="500px">
+    <img src="../projectfolder/sitemedia/IMG_8322.jpg" alt="bag">
+    <img src="../projectfolder/sitemedia/IMG_8326.jpg" alt="bag">
+    <img src="../projectfolder/sitemedia/IMG_8652.jpg" alt="bag">
+    <img src="../projectfolder/sitemedia/IMG_8653.jpg" alt="bag">
 
 
     Thanks for reading and I can’t wait to get to know you!
