--- a/project5/mywork.html
+++ b/project5/mywork.html
@@ -58,7 +58,7 @@
     <img src="../projectfolder/sitemedia/heritage_totbag_mockup.jpg" alt="heritage tote bad">
 </body>
 
-<nav>
+<footer>
     <a href="skeletonsite.html">Home</a> <span>|</span> <a href="mywork.html">My Work</a> <span>|</span> <a href="aboutme.html">About Me</a> <a href="contact.html">Contact</a> 
-</nav>
+</footer>
 </html>
