--- a/project5/skeletonsite.html
+++ b/project5/skeletonsite.html
@@ -49,7 +49,7 @@ audiences and media planning.
 
 
 </body>
-<nav>
+<footer>
     <a href="skeletonsite.html">Home</a> <span>|</span> <a href="mywork.html">My Work</a> <span>|</span> <a href="aboutme.html">About Me</a> <a href="contact.html">Contact</a> 
-</nav>
+</footer>
 </html>
