--- a/lab11/index.html
+++ b/lab11/index.html
@@ -7,9 +7,8 @@
         <link rel="stylesheet" href="labstyles.css">
     </head>
 
-    <body  id="main>
+    <body>
         <nav>
-            <a href="#main" tabindex="1" class="skip">Skip to Content</a>
             <a href="index.html">Home</a> <span>|</span> <a href="skills.html">Skills</a> <span>|</span> <a href="contact.html">Contact</a> 
         </nav>
         <header><a href="http://www.linkedin.com/in/oliviariddoch" target="_blank"><img class="banner" src="../images/bio_banner.jpg" alt="Olivia's Banner"></a></header>
