--- a/project6/aboutme.html
+++ b/project6/aboutme.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me</title>
     <link rel="stylesheet" href="projectstyles.css">
+    <link rel="shortcut icon" type="image/x-icon" href="../projectfolder/sitemedia/wordmark copy.png">
 </head>
 
 
