--- a/project6/aboutme.html
+++ b/project6/aboutme.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me</title>
     <link rel="stylesheet" href="projectstyles.css">
-    <link rel="shortcut icon" type="image/x-icon" href="../projectfolder/sitemedia/wordmark copy.png">
+    <link rel="shortcut icon" type="image/x-icon" href="../projectfolder/sitemedia/wordmarkcopy.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Afacad&family=Jost&display=swap" rel="stylesheet">
@@ -18,7 +18,9 @@
     }
 </script>
 </head>
-
+<a class="skip-to-content-link" href="#main">
+    Skip to content
+  </a>
 
 <div class="firstrow">
     <img id="hamicon" src="../projectfolder/sitemedia/hamburger.png" alt="hamburger icon" onclick="showNav();">
