--- a/project6/home.html
+++ b/project6/home.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Afacad&family=Jost&display=swap" rel="stylesheet">
-<link rel="shortcut icon" type="image/x-icon" href="../projectfolder/sitemedia/wordmark copy.png">
+<link rel="shortcut icon" type="image/x-icon" href="../projectfolder/sitemedia/wordmarkcopy.png">
 </head>
 
 <nav class="splitnav">
