--- a/project6/home.html
+++ b/project6/home.html
@@ -38,7 +38,7 @@
         combine technology and art to create impactful messages. At Syracuse I have intensely studied
         technical design skills including the Adobe Suite as well as the extensive process of researching
         audiences and media planning. I can use databases like MRI Simmons and GWI to study
-        audiences and come to conclusions about their media preferences. <a href="../projectfolder/sitemedia/Olivia_Riddoch_Résumé.pdf" download="Olivia Riddoch Resume" target="_blank">Click here to download my resume! </a></div>
+        audiences and come to conclusions about their media preferences. <a href="../projectfolder/sitemedia/Olivia_Riddoch_Resume.pdf" download="Olivia Riddoch Resume" target="_blank">Click here to download my resume! </a></div>
 </div>
 
 <br>
@@ -59,7 +59,4 @@
     </div>
 </div>
 
-<body>
-    
-</body>
 </html>
