--- a/project6/mywork.html
+++ b/project6/mywork.html
@@ -40,11 +40,11 @@
 
 <main>
     <div class="carousel-container">
-      <div class="carousel-slide"> <img class="hockey1" src="../projectfolder/sitemedia/Game-Day-Graphic-(Home)-(1).jpg"></div>
-      <div class="carousel-slide"><img class="hockey2" src="../projectfolder/sitemedia/Game_Day_AlumniWeekend_Oct_20_Final.jpg"></div>
-      <div class="carousel-slide"><img class="hockey3" src="../projectfolder/sitemedia/Syracuse-Win-Graphic-2023-24.png"></div>
-      <div class="carousel-slide"><img class="hockey4" src="../projectfolder/sitemedia/Pink the Rink 2023 (1).jpg"></div>
-      <div class="carousel-slide"><img class="hockey5" src="../projectfolder/sitemedia/Twitter-Starting-Lineup-2023-24-(1).jpg"></div>
+      <div class="carousel-slide"> <img class="hockey1" src="../projectfolder/sitemedia/Game-Day-Graphic-(Home)-(1).jpg" alt="hockey post"></div>
+      <div class="carousel-slide"><img class="hockey2" src="../projectfolder/sitemedia/Game_Day_AlumniWeekend_Oct_20_Final.jpg" alt="hockey post"></div>
+      <div class="carousel-slide"><img class="hockey3" src="../projectfolder/sitemedia/Syracuse-Win-Graphic-2023-24.png" alt="hockey post"></div>
+      <div class="carousel-slide"><img class="hockey4" src="../projectfolder/sitemedia/Pink the Rink 2023 (1).jpg" alt="hockey post"></div>
+      <div class="carousel-slide"><img class="hockey5" src="../projectfolder/sitemedia/Twitter-Starting-Lineup-2023-24-(1).jpg" alt="hockey post"></div>
   </main>
 
 
@@ -63,10 +63,10 @@
 
 <main>
     <div class="carousel-container">
-      <div class="carousel-slide"> <img class="magazine1" src="../projectfolder/sitemedia/03_Magazine_Riddoch_Final1024_2.jpg"></div>
-      <div class="carousel-slide"><img class="magazine2" src="../projectfolder/sitemedia/03_Magazine_Riddoch_Final.jpg"></div>
-      <div class="carousel-slide"><img class="magazine3" src="../projectfolder/sitemedia/03_Magazine_Riddoch_Final2.jpg"></div>
-      <div class="carousel-slide"><img class="magazine4" src="../projectfolder/sitemedia/03_Magazine_Riddoch_Final3.jpg"></div>
+      <div class="carousel-slide"> <img class="magazine1" src="../projectfolder/sitemedia/03_Magazine_Riddoch_Final1024_2.jpg" alt="magazine home"></div>
+      <div class="carousel-slide"><img class="magazine2" src="../projectfolder/sitemedia/03_Magazine_Riddoch_Final.jpg" alt="magazine page 1"></div>
+      <div class="carousel-slide"><img class="magazine3" src="../projectfolder/sitemedia/03_Magazine_Riddoch_Final2.jpg" alt="magazine page 2"></div>
+      <div class="carousel-slide"><img class="magazine4" src="../projectfolder/sitemedia/03_Magazine_Riddoch_Final3.jpg" alt="magazine page 3"></div>
   </main>
 
 
@@ -83,14 +83,11 @@
 
 <main>
     <div class="carousel-container">
-      <div class="carousel-slide"> <img class="heritage1" src="../projectfolder/sitemedia/greenhouse-grilled-cheese-sticker.png"></div>
-      <div class="carousel-slide"><img class="heritage2" src="../projectfolder/sitemedia/heritage_hat_mockup.jpg"></div>
-      <div class="carousel-slide"><img class="heritage3" src="../projectfolder/sitemedia/heritage_hoodie_mockup.jpg"></div>
-      <div class="carousel-slide"><img class="heritage4" src="../projectfolder/sitemedia/heritage_totbag_mockup.jpg"></div>
+      <div class="carousel-slide"> <img class="heritage1" src="../projectfolder/sitemedia/greenhouse-grilled-cheese-sticker.png" alt="heritage logo"></div>
+      <div class="carousel-slide"><img class="heritage2" src="../projectfolder/sitemedia/heritage_hat_mockup.jpg" alt="heritage hat"></div>
+      <div class="carousel-slide"><img class="heritage3" src="../projectfolder/sitemedia/heritage_hoodie_mockup.jpg" alt="heritage hoodie"></div>
+      <div class="carousel-slide"><img class="heritage4" src="../projectfolder/sitemedia/heritage_totbag_mockup.jpg" alt="heritage totebag"></div>
   </main>
 
 
-<body>
-    
-</body>
 </html>
