--- a/project6/mywork.html
+++ b/project6/mywork.html
@@ -43,7 +43,7 @@
       <div class="carousel-slide"> <img class="hockey1" src="../projectfolder/sitemedia/Game-Day-Graphic-(Home)-(1).jpg" alt="hockey post"></div>
       <div class="carousel-slide"><img class="hockey2" src="../projectfolder/sitemedia/Game_Day_AlumniWeekend_Oct_20_Final.jpg" alt="hockey post"></div>
       <div class="carousel-slide"><img class="hockey3" src="../projectfolder/sitemedia/Syracuse-Win-Graphic-2023-24.png" alt="hockey post"></div>
-      <div class="carousel-slide"><img class="hockey4" src="../projectfolder/sitemedia/Pink the Rink 2023 (1).jpg" alt="hockey post"></div>
+      <div class="carousel-slide"><img class="hockey4" src="../projectfolder/sitemedia/pinktherink.jpg" alt="hockey post"></div>
       <div class="carousel-slide"><img class="hockey5" src="../projectfolder/sitemedia/Twitter-Starting-Lineup-2023-24-(1).jpg" alt="hockey post"></div>
   </main>
 
